# hotspot_socks_proxy

./: 404.html  LICENSE  README.md  build.sh  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  lint.yml
docs/: __init__.py  gen_ref_pages.py  requirements.txt
reference/SUMMARY/: index.html
reference/hotspot_socks_proxy/: index.html
reference/hotspot_socks_proxy/cmd/: index.html
reference/hotspot_socks_proxy/cmd/cli/: index.html
reference/hotspot_socks_proxy/cmd/find_wifi/: index.html
reference/hotspot_socks_proxy/cmd/http_handler/: index.html
reference/hotspot_socks_proxy/cmd/http_proxy/: index.html
reference/hotspot_socks_proxy/cmd/http_server/: index.html
reference/hotspot_socks_proxy/cmd/socks/: index.html
reference/hotspot_socks_proxy/core/: index.html
reference/hotspot_socks_proxy/core/exceptions/: index.html
reference/hotspot_socks_proxy/core/lib/: index.html
reference/hotspot_socks_proxy/core/lib/dns_handler/: index.html
reference/hotspot_socks_proxy/core/lib/proxy_server/: index.html
reference/hotspot_socks_proxy/core/lib/proxy_stats/: index.html
reference/hotspot_socks_proxy/core/lib/socks_handler/: index.html
reference/hotspot_socks_proxy/core/network/: index.html
reference/hotspot_socks_proxy/core/proxy/: index.html
reference/hotspot_socks_proxy/core/utils/: index.html
reference/hotspot_socks_proxy/core/utils/prompt/: index.html
reference/hotspot_socks_proxy/core/utils/prompt/prompt/: index.html
reference/hotspot_socks_proxy/core/utils/prompt/proxy_ui/: index.html
reference/hotspot_socks_proxy/core/utils/prompt/socks_ui/: index.html
reference/hotspot_socks_proxy/core/utils/utils/: index.html
search/: search_index.json
src/go_hotspot_socks_proxy/: __init__.py
src/go_hotspot_socks_proxy/cmd/: cli.py  find_wifi.py
src/go_hotspot_socks_proxy/core/: proxy.py
src/hotspot_socks_proxy/: __init__.py
src/hotspot_socks_proxy/cmd/: __init__.py  cli.py  find_wifi.py  http.py  http_handler.py  http_proxy.py  http_server.py  socks.py
src/hotspot_socks_proxy/core/: __init__.py  exceptions.py  network.py  proxy.py
src/hotspot_socks_proxy/core/lib/: __init__.py  dns_handler.py  proxy_server.py  proxy_stats.py  proxy_ui.py  socks_handler.py
src/hotspot_socks_proxy/core/utils/: __init__.py  log_config.py  utils.py
src/hotspot_socks_proxy/core/utils/prompt/: __init__.py  prompt.py  proxy_ui.py  socks_ui.py
